--- a/assign2/Assignment2.Rmd
+++ b/assign2/Assignment2.Rmd
@@ -19,6 +19,7 @@ Q1: Construct a stacked bar chart to show the number of females and males in eac
 
 Hint: `geom_text()` may help you show the numbers in the bars.
 The two color values `#C73C68` and `#B6C468` can help.
+
 ```{r}
 ggplot(df, aes(y = reorder(sector, n, sum, decreasing = TRUE), x = n, fill = sex)) +
   geom_bar(stat = "identity") +
@@ -27,8 +28,8 @@ ggplot(df, aes(y = reorder(sector, n, sum, decreasing = TRUE), x = n, fill = sex
     x = "Number of persons",
     y = ""
   ) +
-  scale_fill_manual(values = c("F" = "#C73C68", "M" = "#B6C468"))
-# + theme_minimal()
+  scale_fill_manual(values = c("F" = "#C73C68", "M" = "#B6C468")) +
+  theme_classic()
 ```
 Q2: Based on the dataset `SaratogaHouses` from package `mosaicData`,
 please draw a scatterplot for house ages and prices with quadratic line of best fit.
@@ -36,6 +37,7 @@ please draw a scatterplot for house ages and prices with quadratic line of best 
 Hint: `geom_smooth()` may help you to construct the linear regression line.
 You can specify the points with `size = 1`, `alpha = 0.4`,
 the fitting line with `size = 0.5`, `color = "tomato"`.
+
 ```{r}
 library(mosaicData)
 data(SaratogaHouses)
@@ -52,10 +54,12 @@ ggplot(SaratogaHouses, aes(x = age, y = price)) +
   scale_y_continuous(labels = scales::dollar_format()) +
   theme_minimal()
 ```
+
 Q3: Based on the dataset `SaratogaHouses` from package `mosaicData`,
 please draw the boxplot for the house price by number of rooms.
 
 Hint: Transparency of boxplot is specified as `alpha = 0.5`.
+
 ```{r}
 # Create a boxplot for house prices by the number of rooms
 ggplot(SaratogaHouses, aes(x = factor(rooms), y = price)) +
