--- a/assign2/Assignment2.Rmd
+++ b/assign2/Assignment2.Rmd
@@ -1,6 +1,9 @@
 ---
 title: 'Assignment 2'
 output: html_document
+editor_options: 
+  markdown: 
+    wrap: sentence
 ---
 
 ```{r}
@@ -15,6 +18,7 @@ df <- CPS85 %>%
 
 print(df)
 ```
+
 Q1: Construct a stacked bar chart to show the number of females and males in each sectors.
 
 Hint: `geom_text()` may help you show the numbers in the bars.
@@ -31,12 +35,11 @@ ggplot(df, aes(y = reorder(sector, n, sum, decreasing = TRUE), x = n, fill = sex
   scale_fill_manual(values = c("F" = "#C73C68", "M" = "#B6C468")) +
   theme_classic()
 ```
-Q2: Based on the dataset `SaratogaHouses` from package `mosaicData`,
-please draw a scatterplot for house ages and prices with quadratic line of best fit.
+
+Q2: Based on the dataset `SaratogaHouses` from package `mosaicData`, please draw a scatterplot for house ages and prices with quadratic line of best fit.
 
 Hint: `geom_smooth()` may help you to construct the linear regression line.
-You can specify the points with `size = 1`, `alpha = 0.4`,
-the fitting line with `size = 0.5`, `color = "tomato"`.
+You can specify the points with `size = 1`, `alpha = 0.4`, the fitting line with `size = 0.5`, `color = "tomato"`.
 
 ```{r}
 library(mosaicData)
@@ -55,8 +58,7 @@ ggplot(SaratogaHouses, aes(x = age, y = price)) +
   theme_minimal()
 ```
 
-Q3: Based on the dataset `SaratogaHouses` from package `mosaicData`,
-please draw the boxplot for the house price by number of rooms.
+Q3: Based on the dataset `SaratogaHouses` from package `mosaicData`, please draw the boxplot for the house price by number of rooms.
 
 Hint: Transparency of boxplot is specified as `alpha = 0.5`.
 
@@ -77,7 +79,7 @@ Q4: Please plot the Cleveland dot chart for the percentage of receipts in GDP by
 The datasset `newgdp` from the package `CGPfunctions` records current receipts of fifteen national governments as a percentage of gross domestic product.
 You can read more detail by running the code `??newgdp` in the console.
 
-Hint: Please install the package CGPfunctions if you haven’t installed.
+Hint: Please install the package CGPfunctions if you haven't installed.
 (No need to write the install code in the R code chunk below.) The range of x is (0.2, 0.6).
 
 ```{r}
@@ -119,60 +121,107 @@ ggplot(df, aes(
   )
 ```
 
-Q5  A tiny project
+Q5 A tiny project
 
 The data file `Real-Estate.txt` contains information on the homes sold in the Denver area during the year 2003.
 
-Please analyze the data and abstract at least 2 tasks.
+|          | Description                                      |
+|----------|--------------------------------------------------|
+| Price    | Selling price in \$1000                          |
+| Bedrooms | Number of bedrooms                               |
+| Size     | Size of the home in square feet                  |
+| Pool     | Whether having a swimming Pool (yes or no)       |
+| Distance | Distance from the home to the center of the city |
+| Township | Township No.                                     |
+| Garage   | Whether is garage attached (yes or no)           |
+| Baths    | Number of bathrooms                              |
 
-Design your visualization according to the design principles and give your justification. Please write your design thoughts clearly.
+a) Please analyze the data and abstract at least 2 tasks.
 
-Implement your visualization by R. Please write the annotations for each step.
+b) Design your visualization according to the design principles and give your justification.
+Please write your design thoughts clearly.
+
+c) Implement your visualization by R.
+Please write the annotations for each step.
+
+## Analyze: 
+
+The data set have the shape of 105 rows and 8 columns, including 2 categorical feature and 6 numerical feature.
+
+Base on the data set, we can abstract the following tasks:
+
+-   How the number of rooms affect the price of the properties?
+
+```{=html}
+<!-- -->
+```
+-   What impact does the presence of a garage have on the price?
+
+-   Find out the main factors affect the price.
+
+Before the data visualization, let's do the data preprocessing
 
 ```{r}
+# Data Preprocessing: Convert Pool and Garage to categorical data
 df <- read.table("Real-Estate.txt", header = TRUE) %>%
   mutate(Pool = ifelse(Pool == 1, "With Pool", "Without Pool")) %>%
   mutate(Garage = ifelse(Garage == 1, "With Garage", "Without Garage"))
-
-ggplot(df, aes(x = Price)) +
-  geom_histogram() +
-  facet_grid(Pool ~ Garage) +
-  labs(title = "Salary histograms by rank")
-
-ggplot(df, aes(x = Size, y = Price, color = Pool)) +
-  geom_point(
-    size = 2,
-    alpha = .5
-  ) +
-  geom_smooth(
-    method = "lm",
-    se = FALSE,
-    linewidth = 1.5
-  )
 ```
 
+## Number of rooms V.S. Price
 
-Number of rooms V.S. Price
+**Design Thoughts:**
+
+-   **Visual Element:** A boxplot is suitable for comparing the distribution of property prices for different numbers of rooms.
+
+-   **X-axis:** Number of rooms (Bedrooms).
+
+-   **Y-axis:** Property Prices.
+
+-   **Justification:** Boxplots are effective for displaying the central tendency, spread, and potential outliers in a dataset.
+    They are particularly useful for comparing the distribution of a numerical variable (price) across different categories (number of rooms).
+
 ```{r}
 ggplot(df, aes(x = factor(Bedrooms), y = Price)) +
-  geom_boxplot(alpha = 0.5, notch = F, fill = "cornflowerblue") +
+  geom_boxplot(alpha = 0.5, notch = F, fill = "cornflowerblue") + # use boxplot
   labs(
     title = "House price distribution by number of rooms",
     x = "Number of rooms",
     y = "Price"
-  ) +
+  ) + # set labels
   scale_y_continuous(labels = scales::dollar_format()) +
   theme_minimal()
 ```
-How Garage affect the price of the room
+
+### How Garage affect the price of the room
+
+**Design Thoughts:**
+
+-   **Visual Element:** A density plot is suitable for illustrating the distribution of property prices based on the presence or absence of a garage.
+
+-   **X-axis:** Property Prices.
+
+-   **Fill (Color):** Presence or absence of a garage.
+
+-   **Justification:** Density plots are effective for showing the distribution of a continuous variable (price) and understanding how it varies across different categories (presence or absence of a garage).
 
 ```{r}
 ggplot(df, aes(x = Price, fill = Garage)) +
   geom_density(alpha = 0.5)
 ```
 
+### What's the main factor affect the price
 
-```{r}
+**Design Thoughts:**
+
+-   **Visual Element:** A pair plot (scatterplot matrix) is suitable for visualizing relationships between multiple variables.
+
+-   **Variables:** Price, Bedrooms, Size, Distance, and Baths.
+
+-   **Justification:** A pair plot allows us to examine potential correlations and patterns between the main factors that could affect property prices.
+    Scatterplots show the relationship between two numerical variables, and histograms show the distribution of individual variables.
+
+```{r, message=FALSE}
 library(GGally)
 ggpairs(df)
 ```
